--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.637.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -23,6 +24,7 @@
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
+    "razorpay": "^2.9.5",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
